<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/audio_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/background">

    <ImageView
        android:id="@+id/music_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="5dp"
        android:src="@drawable/ic_music_note" />

    <TextView
        android:id="@+id/music_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@id/menuMore"
        android:layout_toEndOf="@id/music_img"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="File name"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/music_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@id/menuMore"
        android:layout_toEndOf="@id/music_img"
        android:layout_below="@id/music_file_name"
...
