<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="Download"
        android:id="@+id/download"
        app:showAsAction="never"/>
<!--    <item-->
<!--        android:title="Add to album"-->
<!--        android:id="@+id/addAlbum"-->
<!--        app:showAsAction="never"/>-->
</menu>